# woven-imprint

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MEMORY-SIDE-FIXES.md  README.md  SECURITY.md  article_draft.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  test_live.py  test_live_rel.py  test_stellamore.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
demo/: index.html  package-lock.json  package.json  vite.config.ts
demo/src/: App.tsx
docs/: ARCHITECTURE.md  AUDIT_FINDINGS.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  EVALUATION.md  GETTING_STARTED.md  LIGHT_SIMULATION_RESULTS.md  MIGRATION.md  RELEASE_CHECKLIST.md  RESEARCH.md  RESULTS.md  UI_GUIDE.md  setup-docker.md  setup-linux.md  setup-mac.md  setup-windows.md
eval/: bench_memory.py  bench_persistence.py  bench_persona.py  framework.py  generate_charts.py  pride_and_prejudice.py  run_eval.py
examples/: README.md  basic_usage.py  mcp_setup.md  multi_character.py  openai_proxy.py
paper/: config.yaml
research/: competitive_analysis.md  foundation_study.json  must_read.json  synthesis.md
scripts/: build_meridian_seed.py
src/woven_imprint/: __init__.py  (+10 more)
tests/: helpers.py  test_character_integration.py  test_consistency.py  test_consolidation.py  test_context.py  test_demo_persistence.py  test_demo_server.py  test_emotion.py  test_engine.py  test_gemma_edge.py  test_growth.py  test_ingest.py  test_interaction.py  test_migration.py  test_narrative.py  test_persona.py  test_providers.py  test_relationship.py  test_retrieval.py  test_rrf.py  test_services.py  test_sidecar.py  test_storage.py  test_sync.py
(+83 files in other folders)
