[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woven-imprint"
version = "0.2.0"
description = "Persistent Character Infrastructure — characters that survive across time"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "Toni Mikkola", email = "virtaava@gmail.com"},
]
keywords = ["ai", "character", "memory", "persona", "llm", "npc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
sentence-transformers = ["sentence-transformers>=3.0"]
mcp = ["mcp>=1.0"]
pdf = ["pymupdf>=1.24"]
ui = ["gradio>=5.0"]
all = ["openai>=1.0", "anthropic>=0.30", "sentence-transformers>=3.0", "mcp>=1.0", "pymupdf>=1.24", "gradio>=5.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
woven-imprint = "woven_imprint.cli:main"

[project.urls]
Repository = "https://github.com/virtaava/woven-imprint"
Documentation = "https://github.com/virtaava/woven-imprint/tree/master/docs"
"Bug Tracker" = "https://github.com/virtaava/woven-imprint/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
